# PACE-ICRA2026

./: .gitignore  .pre-commit-config.yaml  A3_MIGRATION_PLAN_2026-06-23.md  A3_TRAINING_COMPARISON_2026-07-01.md  A3_VS_T1_ANALYSIS_2026-06-23.md  CODE_CHANGE_LOG_2026-06-22.md  CODE_CHANGE_LOG_2026-06-23_A3.md  LICENSE.txt  README.md  setup.py  笔记.md
legged_lab/assets/a3/t2d5_pingpang/a3_t2d5_pingpang/: CMakeLists.txt  package.xml
legged_lab/assets/a3/t2d5_pingpang/a3_t2d5_pingpang/config/: joint_names_0000014503_A3T2.5-URDF-std-pingpang-0409.yaml
legged_lab/assets/a3/t2d5_pingpang/a3_t2d5_pingpang/launch/: display.launch  gazebo.launch
legged_lab/assets/a3/t2d5_pingpang/a3_t2d5_pingpang/meshes/: head_yaw_Link.STL  imu_in_pelvis_Link.STL  imu_in_torso_Link.STL  left_ankle_pitch_Link.STL  left_ankle_roll_Link.STL  left_hip_pitch_Link.STL  left_hip_yaw_Link.STL  left_knee_shell_Link.STL  left_wrist_pitch_Link.STL  left_wrist_roll_Link.STL  left_wrist_yaw_Link.STL  pingbang_ball_Link.STL  pingpang_black_Link.STL  pingpang_red_Link.STL  right_elbow_Link.STL  right_hand_Link.STL  right_hand_pingpang_Link.STL  right_hip_roll_Link.STL  right_knee_Link.STL  right_shoulder_pitch_Link.STL  right_shoulder_roll_Link.STL  right_wrist_pitch_Link.STL  right_wrist_roll_Link.STL  right_wrist_yaw_Link.STL  std_head_stereo_camera_Link.STL  torso_Link.STL  torso_shell_Link.STL  waist_yaw_Link.STL
legged_lab/assets/a3/t2d5_pingpang/a3_t2d5_pingpang/urdf/: GetJoint_full.bat  GetMass.bat  TOOL_EXCEL_TO_URDF_JOINT.py  TOOL_EXCEL_TO_URDF_LINK-COLOR.py  URDF-JOINT-LINK.urdf  joints.txt  (+4 more)
(+84 files in other folders)
